src/snapshots/gitui__gitui__tests__app_loading_finished.snap
---
source: src/gitui.rs
expression: terminal.backend()
snapshot_kind: text
---
"  Status [1]  |  Log [2]  |  Files [3]  |  Stashing [4]  |  Stashes [5][TEMP_FILE] "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"┌Unstaged Changes────────────────────────────────┐┌Diff: ──────────────────────────────────────────┐"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────{master}┘│                                                │"
"┌Staged Changes──────────────────────────────────┐│                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"Branches [b] Push [p] Fetch [⇧F] Pull [f] Undo Commit [⇧U] Submodules [⇧S] Nav [↑↓→←]       more [.]"
