src/snapshots/gitui__gitui__tests__log_graph_linear.snap
---
source: src/gitui.rs
assertion_line: 341
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  Files [3]  |  Stashing [4]  |  Stashes [5][TEMP_FILE] "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Commit 3/3──────────────────────────────────────────────────────────────────────────────┐"
"│o  [COMMIT] <1m ago    name                  commit B                                    █"
"│o  [COMMIT] <1m ago    name                  commit A                                    ║"
"│o  [COMMIT] <1m ago    name                  initial                                     ║"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        ║"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
"Scroll [↑↓] Mark [˽] Toggle Graph [g] Details [⏎] Branches [b] Compare [⇧C]       more [.]"
